[gd_scene load_steps=4 format=3 uid="uid://duomlpyc2uhl7"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1_bxy4k"]
[ext_resource type="VideoStream" path="res://assets/menu/background/BackgroundVideo.ogv" id="2_g3qtt"]
[ext_resource type="Script" path="res://scripts/menu/steam.gd" id="2_m8eop"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxy4k")

[node name="Steam" type="Node" parent="."]
script = ExtResource("2_m8eop")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_g3qtt")
autoplay = true
expand = true
loop = true

[node name="MenuButtons" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -112.0
offset_right = 96.5
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Host"
flat = true

[node name="Browse" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Browse"
flat = true

[node name="Settings" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Settings
"
flat = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="MenuButtons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuButtons/Settings" to="." method="_on_settings_pressed"]
